apps/base/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitor
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-ingress
  hostnames:
    - grafana.tools.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          namespace: monitor
          port: 8080
